Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31464

Mouse clicks ignored in QtQuick2 window behind a click-through window

    XMLWordPrintable

Details

    • qtbase: 7ae6e48d57f89596ddf40980aeff4ef7340ba689

    Description

      When a QtQuick2 window is behind a click-through/transparent window, any first click after mouse movement does not trigger a MouseArea onClicked handler. The MouseArea must have the "hoverEnabled" property set to true. Subsequent clicks without moving the mouse work as expected.

      A click-through window is a window that lets any mouse events in its area pass through to windows behind it. It can be created with the attached ClickThroughWindow.cpp app, or more realistically, the desktop sharing function of Microsoft Lync 2010 (possibly also other versions or desktop sharing applications that visualize active sharing with an always-on-top border on the screen).

      OnClickedTest.qml provides a minimal example where the behavior can be observed.

      Attachments

        1. ClickThroughWindow.cpp
          0.3 kB
        2. OnClickedTest.qml
          0.4 kB
        3. qtbug31464_clicktrough.tar
          10 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            eifert Sebastian Eifert
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes