Windows: Prevent spurious leave events.

When behind a mouse-event-transparent window, synthesized leave events
are emitted, because the transparent window is considered as the window
under the mouse, not the Qt window.
This change skips transparent windows when searching for the window
under the mouse.

Task-number: QTBUG-31464

Change-Id: I85c8b46a1af37b4d1c5d1d77566ab045657aa9ae
Reviewed-by: Björn Breitmeyer <bjoern.breitmeyer@kdab.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: 7ae6e48d57f89596ddf40980aeff4ef7340ba689 https://github.com/qt/qtbase/commit/7ae6e48d57f89596ddf40980aeff4ef7340ba689